k8s/rails-k8-sidekiq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-k8-sidekiq
  labels:
    app: rails-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-k8
  template:
    metadata:
      labels:
        app: rails-k8
    spec:
      containers:
      - name: rails-k8-sidekiq
        image: danielfoord/rails_k8:0.0.13
        command:
          - "bundle exec sidekiq"
        resources:
          limits:
            cpu: "50m"
            memory: "256Mi"
        # startupProbe:
        #   httpGet:
        #     path: /status
        #     port: 3000
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   failureThreshold: 30
        ports:
        - containerPort: 3000
---
