k8s/rails-k8-maria.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db-statefulset
spec:
  selector:
    matchLabels:
      app: mysql # has to match .spec.template.metadata.labels
  serviceName: mysql-service
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: mysql # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mariadb
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 3306
          hostPort: 3306
          name: mysql
        volumeMounts:
          - name: rails-k8-volume
            mountPath: /var/lib/mysql
      volumes:
      - name: rails-k8-volume
        persistentVolumeClaim:
          claimName: rails-k8-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
