k8s/rails-k8-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-k8-redis
  labels:
    app: rails-k8-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-k8-redis
  template:
    metadata:
      labels:
        app: rails-k8-redis
    spec:
      containers:
      - name: rails-k8-redis
        image: redis:6.2.5
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
        # startupProbe:
        #   httpGet:
        #     path: /status
        #     port: 3000
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   failureThreshold: 30
        ports:
        - containerPort: 6379
        # env:
        # - name: DB_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mysql-secret
        #       key: mysql-root-password
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: mysql-configmap
        #       key: database_uri
        # - name: DB_USER
        #   value: root
        # - name: DB_NAME
        #   value: app_development
        # - name: RAILS_ENV
        #   value: development
---

apiVersion: v1
kind: Service
metadata:
  name: rails-k8-redis
spec:
  selector:
    app: rails-k8-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
